--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: aquamarine;
 }
 
-.greetBtn {
+.greetBtn , .resetBtn {
 	background-color:#44c767;
 	border-radius:28px;
 	border:1px solid #18ab29;
@@ -17,10 +17,10 @@ body {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
-.greetBtn:hover {
+.greetBtn , .resetBtn:hover {
 	background-color:#5cbf2a;
 }
-.greetBtn:active {
+.greetBtn , .resetBtn:active {
 	position:relative;
 	top:1px;
 }
