--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: aquamarine;
 }
 
-.greetBtn , .resetBtn {
+.greetBtn {
 	background-color:#44c767;
 	border-radius:28px;
 	border:1px solid #18ab29;
@@ -13,14 +13,37 @@ body {
 	color:#ffffff;
 	font-family:Arial;
 	font-size:17px;
-	padding:16px 31px;
+	padding:12px 25px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
-.greetBtn , .resetBtn:hover {
+.greetBtn:hover {
 	background-color:#5cbf2a;
 }
-.greetBtn , .resetBtn:active {
+.greetBtn:active {
+	position:relative;
+	top:1px;
+}
+
+.resetBtn {
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:12px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+
+.resetBtn:hover {
+	background-color:#5cbf2a;
+}
+
+.resetBtn:active {
 	position:relative;
 	top:1px;
 }
